--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dubai168</title>
-  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+  <meta property="og:description" content="ยูสใหม่ ยังไงก็แตก!! แจกจริง จ่ายชัวร์!" />
+  <meta property="og:image" content="https://pitsara.github.io/Dubai.github.io/img/8.png" />
+  <meta property="og:url" content="https://pitsara.github.io/Dubai.github.io/" />
+  <meta property="og:type" content="website" />
+  <link rel="icon" href="img/7.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -12,14 +16,15 @@
     <div class="profile">
       <img src="img/1.png" alt="Profile" class="avatar" />
       <h1 class="name">DUBAI 168</h1>
-      <a href="#" class="fancy-button" id="glowText">ลงทะเบียน/เข้าสู่ระบบ</a>
+      <a href="https://dubai168.my.canva.site/" class="fancy-button" id="glowText">ลงทะเบียน<br>เข้าสู่ระบบ</a>
+      <a href="https://lin.ee/cLC0wKk" class="fancy-button" id="glowText">Dubai Services 24hr</a>
       
     </div>
 
     <div class="links">
       
-      <a href="#" class="link-button">เข้าสู่ระบบ</a>
-      <a href="#" class="link-button">ติดต่อ แอดมิน</a>
+      <a href="https://lin.ee/cLC0wKk" class="link-button">ยูสใหม่ ฝากแรกรับโปร คลิก</a>
+      <a href="https://dubai168.my.canva.site/" class="link-button">เช็ค โปร รายวัน</a>
     </div>
 
     <div class="footer">
