--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dubai168</title>
-  <meta property="og:description" content="ยูสใหม่ ยังไงก็แตก!! แจกจริง จ่ายชัวร์!" />
-  <meta property="og:image" content="https://pitsara.github.io/Dubai.github.io/img/8.png" />
-  <meta property="og:url" content="https://pitsara.github.io/Dubai.github.io/" />
-  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Dubai168 - ลองแล้วแตก!" />
+ <meta property="og:description" content="สมัครวันนี้ รับสิทธิพิเศษมากมาย แตกง่าย จ่ายจริง!" />
+ <meta property="og:image" content="https://pitsara.github.io/Dubai.github.io/img/8.png" />
+ <meta property="og:url" content="https://pitsara.github.io/Dubai.github.io/" />
+ <meta property="og:type" content="website" />
   <link rel="icon" href="img/7.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css" />
 </head>
