--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Dubai168</title>
   <meta property="og:title" content="Dubai168 - ลองแล้วแตก!" />
  <meta property="og:description" content="สมัครวันนี้ รับสิทธิพิเศษมากมาย แตกง่าย จ่ายจริง!" />
- <meta property="og:image" content="https://pitsara.github.io/Dubai.github.io/img/8.png" />
+ <meta property="og:image" content="https://pitsara.github.io/Dubai.github.io/img/6.gif" />
  <meta property="og:url" content="https://pitsara.github.io/Dubai.github.io/" />
  <meta property="og:type" content="website" />
   <link rel="icon" href="img/7.png" type="image/x-icon">
