--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dubai168</title>
-  <meta property="og:title" content="แฟชั่นพรีเมียมลดแรง! อัปเดตคอลเลกชันใหม่ทุกสัปดาห์" />
+  
   <meta property="og:description" content="พบสินค้าพรีเมียมคอลเลกชันใหม่ พร้อมโปรลดสูงสุด 50% เฉพาะวันนี้เท่านั้น!" />
-  <meta property="og:image" content="https://pitsara.github.io/Dubai.github.io/img/8.png" />
+  <meta property="og:image" content="https://pitsara.github.io/Dubai.github.io/img/8.gif" />
   <meta property="og:url" content="https://pitsara.github.io/Dubai.github.io/" />
   <meta property="og:type" content="website" />
   <link rel="icon" href="img/7.png" type="image/x-icon">
