--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dubai168</title>
-  <meta property="og:title" content="การันตีจากผู้เข้าใช้บริการ" />
-  <meta property="og:description" content="สัมผัสประสบการณ์ ระดับพรีเมียม!" />
-  <meta property="og:image" content="https://pitsara.github.io/Dubai.github.io/img/8.gif" />
-  <meta property="og:url" content="https://pitsara.github.io/Dubai.github.io/" />
+  <meta property="og:title" content="®DB168 𝕊𝕃０𝕋." />
+  <meta property="og:description" content="สัมผัสประสบการณ์ระดับพรีเมียม!ชั้นนำอันดับ 1 การันตีจากผู้เข้าใช้บริการ" />
   <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://pitsara.github.io/Dubai.github.io/" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/Pitsara/Dubai.github.io/main/img/01.gif" />
+  <meta property="og:image:type" content="image/gif" />
+  <meta property="og:image:width" content="600" />
+  <meta property="og:image:height" content="315" />
   <link rel="icon" href="img/7.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css" />
 </head>
