--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta property="og:description" content="สัมผัสประสบการณ์ระดับพรีเมียม!ชั้นนำอันดับ 1 การันตีจากผู้เข้าใช้บริการ" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://pitsara.github.io/Dubai.github.io/" />
-  <meta property="og:image" content="https://raw.githubusercontent.com/Pitsara/Dubai.github.io/main/img/02.gif" />
-  <meta property="og:image:type" content="image/gif" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/Pitsara/Dubai.github.io/main/img/004.webp" />
+  <meta property="og:image:type" content="image/webp" />
   <meta property="og:image:width" content="300" />
   <meta property="og:image:height" content="300" />
   <link rel="icon" href="img/7.png" type="image/x-icon">
