--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:description" content="สัมผัสประสบการณ์ระดับพรีเมียม!ชั้นนำอันดับ 1 การันตีจากผู้เข้าใช้บริการ" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://pitsara.github.io/Dubai.github.io/" />
-  <meta property="og:image" content="https://raw.githubusercontent.com/Pitsara/Dubai.github.io/main/img/004.webp" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/Pitsara/Dubai.github.io/refs/heads/main/img/004.webp" />
   <meta property="og:image:type" content="image/webp" />
   <meta property="og:image:width" content="300" />
   <meta property="og:image:height" content="300" />
