--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dubai168</title>
-  <meta property="og:title" content="®DB168 ยินดีต้อนรับ...สู่โลกของคนที่ใช่" />
+  <meta property="og:title" content="®DB168 ยินดีต้อนรับ..สู่โลกของคนที่ใช่" />
   <meta property="og:description" content="สัมผัสประสบการณ์ระดับพรีเมียม!ชั้นนำอันดับ 1 การันตีจากผู้เข้าใช้บริการ" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://pitsara.github.io/Dubai.github.io/" />
