--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dubai168</title>
-  <meta property="og:title" content="®DUBAI❶❻❽✨ยินดีต้อนรับ..สู่โลกของคนที่ใช่" />
-  <meta property="og:description" content="สัมผัสประสบการณ์ระดับพรีเมียม!ชั้นนำอันดับ 1 การันตีจากผู้เข้าใช้บริการ" />
+  <meta property="og:title" content="DB®ยินดีต้อนรับ สัมผัสประสบการณ์ระดับพรีเมียม!" />
+  <meta property="og:description" content="เวบชั้นนำอันดับ 1!การันตีจากผู้เข้าใช้บริการ" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://pitsara.github.io/Dubai.github.io/" />
-  <meta property="og:image" content="https://raw.githubusercontent.com/Pitsara/Dubai.github.io/refs/heads/main/img/12.gif" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/Pitsara/Dubai.github.io/refs/heads/main/img/14.gif" />
   <link rel="icon" href="img/7.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css" />
 </head>
