--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DUBAI®168</title>
-  <meta property="og:title" content="DB®ยินดีต้อนรับ สัมผัสประสบการณ์ระดับพรีเมียม!" />
-  <meta property="og:description" content="ชั้นนำอันดับ 1!การันตีจากผู้เข้าใช้บริการ" />
+  <meta property="og:title" content="DB®DUBAI 168 " />
+  <meta property="og:description" content="สัมผัสประสบการณ์ระดับพรีเมียม!ชั้นนำอันดับ 1!การันตีจากผู้เข้าใช้บริการ" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://pitsara.github.io/Dubai.github.io/" />
   <meta property="og:image" content="https://raw.githubusercontent.com/Pitsara/Dubai.github.io/refs/heads/main/img/14.gif" />
