--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DUBAI®168</title>
-  <meta property="og:title" content="DB®DUBAI 168 " />
+  <meta property="og:title" content="𝒟𝐵®𝒟𝒰𝐵𝒜𝐼 168 " />
   <meta property="og:description" content="สัมผัสประสบการณ์ระดับพรีเมียม!ชั้นนำอันดับ 1!การันตีจากผู้เข้าใช้บริการ" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://pitsara.github.io/Dubai.github.io/" />
@@ -16,7 +16,12 @@
   <div class="container">
     <div class="profile">
       <a href="#" target="_blank"><img src="img/1.png" alt="Profile" class="avatar" /></a>
-      <h1 class="name"><a href="#" class="DB1">DUBAI 168</a><br>สัมผัสประสบการณ์ระดับพรีเมียม <br> พร้อมโบนัสสุดพิเศษที่รอคุณอยู่ สมัครง่าย เล่นได้ทันที!</h1>
+      <h1 class="name"><a href="#" class="DB1">👑 𝒟𝒰𝐵𝒜𝐼 ①⑥⑧ 👑</a><br>💥ยูsใหม่llตกง่ายฝาก 1️⃣0️⃣0️⃣เพิ่ม%llตก
+        <br>📢โปsฝากllรก1️⃣0️⃣0️⃣รับสูตรโบนัสไทม์
+        <br>📢โปsฝาllรก1️⃣0️⃣0️⃣หมุนวงล้อลุ้นทองคำ
+        <br>📢ฝากllรก 3️⃣0️⃣0️⃣หมุนวงล้อรับเครดิตสูงสุด6️⃣0️⃣0️⃣฿
+        <br>✅ สล็oตLว็บตรง Lว็บตรง PG จ่ายเต็มไม่ผ่านเอเย่นต์
+      </h1>
     <div class="image-container">
         <div class="cute-shake"><a href="https://aff.affclick.online/?id=c322628b-e12a-4e5e-96f6-31f6409f9e42" target="_blank">
         <img src="imgs/6.gif" alt="เข้าสู่ระบบ" />
