--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DUBAI®168</title>
-  <meta property="og:title" content="𝒟𝐵®𝒟𝒰𝐵𝒜𝐼 168 " />
+  <meta property="og:title" content="DB DUBAI®168 " />
   <meta property="og:description" content="สัมผัสประสบการณ์ระดับพรีเมียม!ชั้นนำอันดับ 1!การันตีจากผู้เข้าใช้บริการ" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://pitsara.github.io/Dubai.github.io/" />
@@ -15,15 +15,16 @@
 <body>
   <div class="container">
     <div class="profile">
-      <a href="#" target="_blank"><img src="img/1.png" alt="Profile" class="avatar" /></a>
-      <h1 class="name"><a href="#" class="DB1">👑 𝒟𝒰𝐵𝒜𝐼 ①⑥⑧ 👑</a><br>💥ยูsใหม่llตกง่ายฝาก 1️⃣0️⃣0️⃣เพิ่ม%llตก
-        <br>📢โปsฝากllรก1️⃣0️⃣0️⃣รับสูตรโบนัสไทม์
-        <br>📢โปsฝาllรก1️⃣0️⃣0️⃣หมุนวงล้อลุ้นทองคำ
-        <br>📢ฝากllรก 3️⃣0️⃣0️⃣หมุนวงล้อรับเครดิตสูงสุด6️⃣0️⃣0️⃣฿
-        <br>✅ สล็oตLว็บตรง Lว็บตรง PG จ่ายเต็มไม่ผ่านเอเย่นต์
+      <img src="img/1.png" alt="Profile" class="avatar" />
+      <h1 class="name"><a class="DB1">👑♠ ♣ ♥ ♦👑</a><br> ✨ต้อนรับสมาชิกใหม่ โปรพิเศษ สำหรับคุณ
+        <br>🧧 ฝากแรก รับสิทธิ!!
+        <br>🎯 สูตรโบนัสไทม์ & หมุนวงล้อของรางวัล  
+        <br>🎮 เล่นจากค่ายแท้ ปลอดภัย มั่นใจทุกยอด
+        <br>🤝 ดูแลโดยทีมงานมืออาชีพ ตลอด 24 ชั่วโมง
+        <br>👑—สัมผัสใหม่ระดับพรีเมียม—👑
       </h1>
     <div class="image-container">
-        <div class="cute-shake"><a href="https://aff.affclick.online/?id=c322628b-e12a-4e5e-96f6-31f6409f9e42" target="_blank">
+        <div class="cute-shake"><a href="https://game-168.github.io/Loading/" target="_blank">
         <img src="imgs/6.gif" alt="เข้าสู่ระบบ" />
         </a></div>
         <a href="https://lin.ee/cLC0wKk" target="_blank">
@@ -32,24 +33,24 @@
         </a>
         <a href="#" target="_blank">
           
-          <img src="imgs/2.gif" alt="เข้าสู่ระบบ"/>
+          <img src="imgs/2.gif" alt="แนะนำ"/>
         </a>
         <a href="#" target="_blank">
           
-          <img src="imgs/1.gif" alt="เข้าสู่ระบบ"/>
+          <img src="imgs/1.gif" alt="แนะนำ"/>
         </a>
 
     </div> 
     </div>
 
     <div class="links">   
-      <a href="#" target="_blank" class="link-button fancy-button"  id="glowText">โบนัสสุดพิเศษที่รอคุณอยู่</a>
-      <a href="#" target="_blank" class="link-button fancy-button" id="glowText">สมัครง่าย เล่นได้ทันที!</a>
+      <a target="_blank" class="link-button fancy-button"  id="glowText">แจ้ง รับ สิทธิ</a>
+      <a target="_blank" class="link-button fancy-button" id="glowText">เช็ค โปร รายวัน</a>
     </div>
 
     <div class="footer">
-      <p class="description">DUBAI® ยินดีต้อนรับ !!</p>
-      <a href="#" target="_blank" class="DB1"><p>© Dubai168.co</p></a>
+      <p class="description">สมัครง่าย เล่นได้ทันที!!</p>
+      <a target="_blank" class="DB1"><p>© Dubai168.co</p></a>
     </div>
   </div>
   
