--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <br>👑—สัมผัสใหม่ระดับพรีเมียม—👑
       </h1>
     <div class="image-container">
-        <div class="cute-shake"><a href="https://game-168.github.io/Loading/" target="_blank" rel="noopener noreferrer">
-        <img src="imgs/6.gif" alt="สนใจเข้าชม..รายละเอียดเพิ่ม" />
+        <div class="cute-shake"><a href="https://aff.affclick.online/?id=c322628b-e12a-4e5e-96f6-31f6409f9e42" target="_blank" rel="noopener noreferrer">
+        <img src="imgs/6.gif" alt="คลิกเพื่อเข้าชม..รายละเอียดเพิ่มเติม" />
         </a></div>
         <a href="https://lin.ee/cLC0wKk" target="_blank" rel="noopener noreferrer">
-          <img src="imgs/5.gif" alt="สอบถามเพิ่มเติมติดต่อผู้ดูแล"/>
+          <img src="imgs/5.gif" alt="หากพบปัญหา โปรดแจ้งทางเรา"/>
         </a>
           <img src="imgs/2.gif" alt="แนะนำ"/>
           <img src="imgs/1.gif" alt="แนะนำ"/>
